Fix block toolbar appender spacing

--- a/src/blocks/button-container/editor.scss
+++ b/src/blocks/button-container/editor.scss
@@ -21,6 +21,7 @@
 
 .gblocks-add-new-button svg {
 	margin-right: 0 !important;
+	margin-left: 0 !important;
 }
 
 .gblocks-button-container-appender {
